@startuml 
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

class APIGateway {
}

class AuthController {
    - _repo: IAuthRepositories
    + ForgotPassword([FromBody] ForgotPasswordRequestDTO requestDTO): Task<IActionResult> 
}

interface IAuthRepository { 
    + ForgotPassword(string email): Task
}

class AuthRepositories {
    - _dao: AuthDAO
    + ForgotPassword(string email): Task
}

class AuthDAO {
    - _client.From<Profile> : ISupabaseTable<Profile>
    + ForgotPassword(string email): Task
}

class Profile {
    + Id: Guid
    + FullName: string
    + ProfilePicture: string
    + Bio: string
    + DateOfBirth: DateTime
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + Role: string
    + AccountId: Guid
}

APIGateway -- AuthController
AuthController -- IAuthRepository

IAuthRepository <|-- AuthRepositories

AuthRepositories "1" -- "1..*" AuthDAO

AuthDAO "1"--"0..*" Profile
@enduml